syntax = "proto3";

package useradmin;

service UserAdminGrpcService {
  rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse);
  rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
  rpc UpdateUserStatus(UpdateUserStatusRequest) returns (UpdateUserStatusResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc SearchUsers(SearchUsersRequest) returns (SearchUsersResponse);
}

message GetAllUsersRequest {
  int32 page = 1;
  int32 limit = 2;
}

message GetAllUsersResponse {
  repeated UserData users = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
  int32 totalPages = 5;
  bool success = 6;
  string message = 7;
}

message GetUserByIdRequest {
  string userId = 1;
}

message GetUserByIdResponse {
  UserData user = 1;
  bool success = 2;
  string message = 3;
}

message UpdateUserStatusRequest {
  string userId = 1;
  string status = 2;
  string reason = 4;
}

message UpdateUserStatusResponse {
  bool success = 1;
  string message = 2;
  UserData user = 3;
}

message DeleteUserRequest {
  string userId = 1;
  string reason = 3;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

message SearchUsersRequest {
  string query = 1;
  string searchBy = 2;
  int32 limit = 3;
}

message SearchUsersResponse {
  repeated UserData users = 1;
  int32 total = 2;
  bool success = 3;
}

message UserData {
  string id = 1;
  string email = 2;
  string name=3;
  string phone = 4;
  string status = 5;
  string role = 6;
}

message Address {
  string street = 1;
  string city = 2;
  string state = 3;
  string country = 4;
  string postalCode = 5;
}